--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -3,7 +3,7 @@
   width: 100%;
   overflow: hidden;
   padding-top: 3px;
-  min-width: 500px;
+  // min-width: 500px;
 }
 
 .react-autoql-dashboard-container.edit-mode {
