--- a/src/components/Dashboard/DashboardTile/DashboardTile.scss
+++ b/src/components/Dashboard/DashboardTile/DashboardTile.scss
@@ -165,6 +165,7 @@
       color: var(--react-autoql-text-color-primary, #356f90);
       background: var(--react-autoql-background-color-secondary);
       outline: none !important;
+      padding: 0 10px;
       margin: 0px;
       height: 100%;
       flex: 1;
