--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -163,7 +163,7 @@
 
 .react-autoql-drawer .react-autoql-drawer-header-btn {
   &.hidden {
-    display: none;
+    display: none !important;
   }
 
   .react-autoql-filter-lock-icon-container {
