--- a/src/components/ConfirmPopover/ConfirmPopover.scss
+++ b/src/components/ConfirmPopover/ConfirmPopover.scss
@@ -4,6 +4,7 @@
 
 .react-autoql-confirm-popover-content {
   padding: 10px;
+  flex: 1;
 
   .react-autoql-confirm-popover-title {
     display: flex;
