--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -1,5 +1,9 @@
 .react-autoql-select-popover-container {
   margin: 0 6px;
+
+  .popover-container-content {
+    padding: 0;
+  }
 }
 
 .react-autoql-select-and-label {
