--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -294,9 +294,15 @@ g.legendOrdinal tspan {
   }
 }
 
+g.legendOrdinal {
+  text,
+  tspan {
+    font-size: inherit;
+  }
+}
+
 g.legendOrdinal .legendTitle tspan {
   letter-spacing: 0.04em !important;
-  font-size: 12px;
   cursor: default;
 }
 
