fix: change all "transition: all" to specific properties

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -57,7 +57,9 @@
   right: 50%;
   bottom: 50%;
   left: 50%;
-  transition: all 0.2s;
+  transition-property: color, border-color, background-color, opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
   background: var(--react-autoql-accent-color, #26a7df);
 }
 
