--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -60,8 +60,9 @@
       font-size: inherit;
       font-family: inherit;
       outline: none !important;
-      transition: all 0.2s ease;
-      transition-property: border-color, color, opacity;
+      transition-property: color, border-color, background-color, opacity;
+      transition-duration: 0.3s;
+      transition-timing-function: ease;
       padding: 10px;
       line-height: 1em;
 
