--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -9,7 +9,7 @@
   height: auto;
   border-radius: 4px;
   outline: none !important;
-  transition: all 0.2s ease;
+  transition: border-color 0.2s ease, background-color 0.2s ease, opacity 0.2s ease, color 0.2s ease;
   cursor: pointer;
 
   &.btn-no-border {
