--- a/src/components/Notifications/Group/Group.scss
+++ b/src/components/Notifications/Group/Group.scss
@@ -15,7 +15,9 @@
   text-align: center;
   font-size: 20px;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.13);
-  transition: all 0.2s ease;
+  transition-property: color, border-color, background-color, opacity;
+  transition-duration: 0.2s;
+  transition-timing-function: ease;
   margin-right: 5px;
   cursor: pointer;
 
@@ -76,7 +78,9 @@
       text-align: center;
       background: var(--react-autoql-background-color-secondary, white);
       color: var(--react-autoql-text-color-placeholder, rgba(0, 0, 0, 0.2));
-      transition: all 0.3s ease;
+      transition-property: color, border-color, background-color, opacity;
+      transition-duration: 0.3s;
+      transition-timing-function: ease;
       cursor: pointer;
 
       &:hover {
@@ -133,7 +137,9 @@
       color: var(--react-autoql-text-color-primary, rgba(0, 0, 0, 0.2));
       opacity: 0.5;
       border: 1px solid;
-      transition: all 0.2s ease;
+      transition-property: color, border-color, background-color, opacity;
+      transition-duration: 0.3s;
+      transition-timing-function: ease;
       cursor: pointer;
 
       &:hover {
