--- a/src/components/Notifications/RuleSimple/RuleSimple.scss
+++ b/src/components/Notifications/RuleSimple/RuleSimple.scss
@@ -56,7 +56,9 @@
       flex-direction: column;
       padding: 2px 0;
       border-radius: 4px;
-      transition: all 0.3s ease;
+      transition-property: color, border-color, background-color, opacity;
+      transition-duration: 0.3s;
+      transition-timing-function: ease;
       flex: 0 0 auto;
       margin-right: 12px;
     }
@@ -66,7 +68,9 @@
       flex-direction: column;
       padding: 2px 0;
       border-radius: 4px;
-      transition: all 0.3s ease;
+      transition-property: color, border-color, background-color, opacity;
+      transition-duration: 0.3s;
+      transition-timing-function: ease;
       flex: 1;
 
       .react-autoql-rule-condition-select {
