--- a/src/components/QueryOutput/QueryOutput.scss
+++ b/src/components/QueryOutput/QueryOutput.scss
@@ -51,7 +51,9 @@
   outline: none !important;
   cursor: pointer;
   letter-spacing: 0.05em;
-  transition: all 0.1s ease;
+  transition-property: color, border-color, background-color, opacity;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
   border: 1px solid rgba(0, 0, 0, 0.15);
   border-radius: 5px;
   color: inherit;
@@ -71,7 +73,9 @@
   outline: none !important;
   cursor: pointer;
   letter-spacing: 0.05em;
-  transition: all 0.1s ease;
+  transition-property: color, border-color, background-color, opacity;
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
   border-color: #e2e2e26e;
   color: inherit;
 }
