fix: popover position

--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -217,6 +217,7 @@ g.legendOrdinal tspan {
 
   .axis-selector-apply-btn-container {
     flex: 0 0 auto;
+    padding-top: 10px;
 
     .axis-selector-apply-btn {
       margin: 0;
