--- a/src/components/ChatMessage/ChatMessage.scss
+++ b/src/components/ChatMessage/ChatMessage.scss
@@ -4,10 +4,13 @@
   justify-content: flex-start;
   align-items: flex-start;
   width: 100%;
-  padding: 15px;
-  padding-bottom: 0;
+  padding: 10px 20px 5px 20px;
   transition: background-color 0.2s ease;
   position: relative;
+
+  &:first-child {
+    padding-top: 20px;
+  }
 
   &.text .chat-single-message-container .chat-message-bubble {
     max-width: 85%;
@@ -146,6 +149,8 @@
 
   .chat-message-rt-container {
     flex: 0 0 auto;
+    padding-top: 5px;
+    padding-left: 5px;
 
     .react-autoql-reverse-translation {
       background: transparent;
