--- a/src/components/VizToolbar/VizToolbar.scss
+++ b/src/components/VizToolbar/VizToolbar.scss
@@ -36,7 +36,7 @@
     line-height: 24px;
   }
 
-  &.selected {
+  &.react-autoql-toolbar-btn-selected {
     color: var(--react-autoql-accent-color);
   }
 }
