--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -59,6 +59,9 @@
 
 .filter-lock-menu-content {
   padding: 5px 10px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   &.closed {
     opacity: 0;
@@ -74,6 +77,10 @@
     font-weight: 500;
   }
 
+  .react-autoql-empty-filter-list {
+    opacity: 0.7;
+  }
+
   .react-autoql-filter-lock-list-loading-container,
   .react-autoql-empty-filter-list {
     display: flex;
@@ -82,6 +89,7 @@
     opacity: 0.8;
     padding-right: 20px;
     padding-bottom: 45px;
+    color: var(--react-autoql-text-color-primary);
   }
 
   .react-autoql-filter-lock-list-loading-container,
