--- a/src/components/Notifications/NotificationFeed/NotificationFeed.scss
+++ b/src/components/Notifications/NotificationFeed/NotificationFeed.scss
@@ -45,6 +45,12 @@
   }
 }
 
+.react-autoql-notification-list-container-mobile {
+  .notification-feed-list {
+    padding: 0 10px;
+  }
+}
+
 .notification-feed-top-options-container {
   display: flex;
   flex-direction: row;
