--- a/src/components/Popover/Popover.scss
+++ b/src/components/Popover/Popover.scss
@@ -1,6 +1,5 @@
 .react-tiny-popover-container {
   z-index: 99999;
-  opacity: 1 !important;
   overflow: hidden !important;
   max-width: 95vw;
   min-height: 0px;
@@ -76,23 +75,33 @@
 
     left: 0px !important;
     right: 0px !important;
-    top: 50% !important;
+    top: 45% !important;
     transform: translate(0, -50%) !important;
 
     width: 100vw !important;
     max-width: 100vw !important;
     padding: 0 !important;
     min-height: 45px;
-    max-height: calc(100vh - 120px);
+    max-height: calc(100vh - 150px);
     border-radius: 0 !important;
 
-    transition: box-shadow 0.3s ease;
     background: var(--react-autoql-background-color-secondary);
     box-shadow: 0px 0px 100vh 100vh var(--react-autoql-mobile-mask-color, rgba(0, 0, 0, 0.15)),
       0px 0 8px var(--react-autoql-box-shadow-color, rgba(0, 0, 0, 0.15));
 
+    animation: fade 0.2s ease;
+
     .popover-container-content {
       border-radius: 0 !important;
     }
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
