--- a/src/components/Charts/Axis/Axis.scss
+++ b/src/components/Charts/Axis/Axis.scss
@@ -217,6 +217,7 @@ g.legendOrdinal tspan {
 
   .axis-selector-apply-btn-container {
     flex: 0 0 auto;
+    padding-top: 10px;
 
     .axis-selector-apply-btn {
       margin: 0;
@@ -294,9 +295,15 @@ g.legendOrdinal tspan {
   }
 }
 
+g.legendOrdinal {
+  text,
+  tspan {
+    font-size: inherit;
+  }
+}
+
 g.legendOrdinal .legendTitle tspan {
   letter-spacing: 0.04em !important;
-  font-size: 12px;
   cursor: default;
 }
 
