--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -7,7 +7,15 @@
   }
 
   &.filter-lock-popover-mobile {
-    height: calc(100vh - 200px);
+    border: none;
+    transform: unset !important;
+    height: calc(100vh - 80px);
+    max-height: calc(100vh - 80px);
+    top: 0px !important;
+
+    .popover-container-content {
+      animation: scale-down-tl 0.2s ease;
+    }
   }
 
   .filter-lock-toast-container {
@@ -59,6 +67,9 @@
 
 .filter-lock-menu-content {
   padding: 5px 10px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 
   &.closed {
     opacity: 0;
@@ -74,6 +85,10 @@
     font-weight: 500;
   }
 
+  .react-autoql-empty-filter-list {
+    opacity: 0.7;
+  }
+
   .react-autoql-filter-lock-list-loading-container,
   .react-autoql-empty-filter-list {
     display: flex;
@@ -82,6 +97,7 @@
     opacity: 0.8;
     padding-right: 20px;
     padding-bottom: 45px;
+    color: var(--react-autoql-text-color-primary);
   }
 
   .react-autoql-filter-lock-list-loading-container,
@@ -340,5 +356,16 @@
     background-color: var(--react-autoql-background-color-secondary);
     color: var(--react-autoql-text-color-primary);
     opacity: 1;
+  }
+}
+
+@keyframes scale-down-tl {
+  0% {
+    transform: scale(0.5);
+    transform-origin: 0% 0%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 0% 0%;
   }
 }
