--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,6 +1,8 @@
 .react-autoql-slider-container {
-  margin: 4px;
+  position: absolute !important;
+  width: 100%;
   height: 20px;
+  margin: 4px;
 
   .react-autoql-slider-track {
     height: 6px;
