--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -1,3 +1,29 @@
+.react-autoql-histogram-toolbar-container {
+  width: 100%;
+  flex: 0 0 40px;
+  display: flex;
+  flex-direction: row;
+  padding-left: 10px;
+  align-items: center;
+  overflow: hidden;
+  box-sizing: border-box;
+
+  .react-autoql-slider-container {
+    flex: 1;
+  }
+
+  .react-autoql-slider-input-container {
+    flex: 0 0 100px;
+    max-height: 100%;
+
+    .react-autoql-input {
+      min-height: unset;
+      max-height: 100%;
+      height: 30px;
+    }
+  }
+}
+
 .react-autoql-chart-container {
   position: relative;
   width: 100%;
