--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -1,6 +1,6 @@
 .react-autoql-slider-container {
-  position: absolute !important;
-  width: 100%;
+  min-width: 50px;
+  max-width: 100%;
   height: 20px;
   margin: 4px;
 
