--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -1,26 +1,13 @@
-.react-autoql-histogram-toolbar-container {
+.react-autoql-chart-header-container {
   width: 100%;
-  flex: 0 0 40px;
-  display: flex;
-  flex-direction: row;
-  padding-left: 10px;
-  align-items: center;
-  overflow: hidden;
-  box-sizing: border-box;
+  flex: 0 0 auto;
 
-  .react-autoql-slider-container {
-    flex: 1;
+  &.loading {
+    visibility: hidden;
   }
 
-  .react-autoql-slider-input-container {
-    flex: 0 0 100px;
-    max-height: 100%;
-
-    .react-autoql-input {
-      min-height: unset;
-      max-height: 100%;
-      height: 30px;
-    }
+  .react-autoql-slider-wrapper {
+    font-size: var(--react-autoql-chart-font-size, 12px);
   }
 }
 
