--- a/src/components/DataMessenger/DataMessenger.scss
+++ b/src/components/DataMessenger/DataMessenger.scss
@@ -2,7 +2,9 @@
   font-family: var(--react-autoql-font-family), sans-serif;
   line-height: 22px;
   outline: none !important;
-
+  &.mobile{
+	height: calc(100vh - 80px);
+  }
   .react-autoql-notification-list-container {
     height: calc(100% - 60px);
   }
