--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -9,8 +9,8 @@
   &.filter-lock-popover-mobile {
     border: none;
     transform: unset !important;
-    height: calc(100vh - 80px);
-    max-height: calc(100vh - 80px);
+    height: calc(100% - 80px);
+    max-height: calc(100% - 80px);
     top: 0px !important;
 
     .popover-container-content {
