--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -55,6 +55,7 @@
         margin: 10px 5px;
         background: var(--react-autoql-background-color-tertiary);
         border-radius: 10px;
+        cursor: pointer;
       }
 
       .react-autoql-slider-thumb {
@@ -114,6 +115,7 @@
     max-width: 100px;
     display: flex;
     height: 28px;
+    padding-left: 5px;
 
     .react-autoql-slider-input {
       display: flex;
