--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -30,6 +30,13 @@
       -moz-appearance: textfield; /* Firefox */
     }
 
+    input[type='search']::-webkit-search-decoration,
+    input[type='search']::-webkit-search-cancel-button,
+    input[type='search']::-webkit-search-results-button,
+    input[type='search']::-webkit-search-results-decoration {
+      -webkit-appearance: none;
+    }
+
     .react-autoql-input-and-icon {
       flex: 1;
     }
