--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -77,9 +77,10 @@
           color: #fff;
           left: 50%;
           transform: translate(-50%, 0);
-          border-radius: 8px;
+          border-radius: 20px;
           margin-bottom: 2px;
           padding: 2px 8px;
+          line-height: 15px;
           font-size: 10px;
           transition: opacity 0.2s ease;
         }
