--- a/src/components/Dashboard/Dashboard.scss
+++ b/src/components/Dashboard/Dashboard.scss
@@ -128,7 +128,8 @@
     }
 
     .react-autoql-dashboard-drilldown-original {
-      padding-top: 10px;
+      padding: 10px;
+      padding-bottom: 0;
     }
     .drilldown-hide-chart-btn {
       text-align: right;
