fix: css updates for portal

--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -203,6 +203,7 @@
     .react-autoql-filter-list-item-container {
       margin-bottom: 10px;
       margin-right: 0px;
+      color: var(--react-autoql-text-color-primary);
 
       .react-autoql-filter-list-item {
         display: flex;
