--- a/src/components/ConfirmPopover/ConfirmPopover.scss
+++ b/src/components/ConfirmPopover/ConfirmPopover.scss
@@ -13,6 +13,7 @@
     margin-bottom: 8px;
     font-size: 15px;
     min-width: 200px;
+    color: var(--react-autoql-text-color-primary);
 
     .react-autoql-icon {
       margin-right: 6px;
