fixed the issue

--- a/src/components/Slider/Slider.scss
+++ b/src/components/Slider/Slider.scss
@@ -139,6 +139,7 @@
         min-height: unset;
         max-height: 100%;
         font-size: inherit;
+		-moz-appearance: textfield;/*For FireFox*/
       }
     }
   }
