updated the change

--- a/src/components/Charts/ChataChart/ChataChart.scss
+++ b/src/components/Charts/ChataChart/ChataChart.scss
@@ -9,7 +9,7 @@
   .react-autoql-slider-wrapper {
     font-size: var(--react-autoql-chart-font-size, 12px);
 	&.mobile{
-		font-size: 9px;
+		font-size: 0.5rem;
 	}
   }
 }
