--- a/src/components/FilterLockPopover/FilterLockPopover.scss
+++ b/src/components/FilterLockPopover/FilterLockPopover.scss
@@ -216,7 +216,7 @@
         padding-bottom: 1px;
         padding-left: 5px;
 		&.mobile{
-			padding-right: 10px;
+			padding-right: 1rem;
 		}
         .react-autoql-filter-list-item-filter {
           overflow: hidden;
