--- a/src/components/DataExplorer/DataExplorer.scss
+++ b/src/components/DataExplorer/DataExplorer.scss
@@ -13,7 +13,7 @@
   .data-explorer-intro-message {
     opacity: 0;
     transform: translateY(100%);
-    animation: slideUp 0.6s cubic-bezier(0.26, 0.26, 0, 1);
+    animation: slideUp 0.2s cubic-bezier(0.26, 0.26, 0, 1);
     animation-fill-mode: forwards;
     animation-delay: 0s;
   }
@@ -75,7 +75,7 @@
     color: var(--react-autoql-text-color-primary);
     width: 100%;
     overflow: auto;
-    padding-left: 5px;
+    padding: 0px 30px 0px 30px;
     min-height: 0;
     height: calc(100% - 130px);
 
@@ -88,6 +88,15 @@
       justify-content: flex-start;
       overflow: hidden;
       min-height: 0;
+
+      .data-preview-section {
+        flex: 1;
+      }
+      .query-suggestions {
+        flex: 2;
+        margin-top: 20px;
+        padding-left: 15px;
+      }
     }
 
     .data-explorer-section:last-of-type {
@@ -103,34 +112,61 @@
       display: flex;
       flex-direction: column;
       flex-wrap: nowrap;
-      flex: 0 1 100vh;
       height: 100%;
-      padding-left: 8px;
       min-height: 0;
     }
   }
 
-  .react-autoql-card-title-text {
+  .react-autoql-data-explorer-selected-subject-title {
     display: flex;
     flex-wrap: nowrap;
     align-items: center;
+    flex: 0 0 auto;
+    font-weight: 600;
+    font-size: 18px;
+    margin: 5px;
+    margin-bottom: 12px;
 
     .react-autoql-icon {
       margin-right: 5px;
     }
   }
-  .data-explorer-card-placeholder {
+
+  .react-autoql-data-explorer-section-title {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    font-size: 18px;
+    margin: 4px 0px;
+    font-weight: 600;
+
+    .react-autoql-icon {
+      margin-right: 5px;
+    }
+  }
+
+  .react-autoql-data-explorer-title-text {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 6px;
+
+    .react-autoql-icon {
+      margin-right: 5px;
+    }
+  }
+
+  .data-explorer-section-placeholder {
     min-height: 90px;
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    &.data-preview {
-      height: 165px;
-    }
   }
+
   .data-preview-scroll-container {
     color: var(--react-autoql-text-color-primary);
     min-height: 0;
@@ -170,7 +206,7 @@
       }
 
       .animated-item {
-        animation: fadeIn 0.3s linear;
+        animation: fadeIn 0.2s linear;
         animation-fill-mode: both;
       }
     }
